name:                projecteuler
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable projecteuler
  main-is:             Main.hs
  other-modules:       Lib.Combinations, Lib.Digits, Lib.Divisors, Lib.FloodFill, Lib.IsPrime,
                       Lib.Isqrt, Lib.Permutations, Lib.Power, Lib.PowerMod, Lib.PythagoreanTriples,
                       Lib.FoldUniq,
                       Problems,
                       Prb.Prb001, Prb.Prb002, Prb.Prb003, Prb.Prb004, Prb.Prb005, Prb.Prb006,
                       Prb.Prb007, Prb.Prb008, Prb.Prb009, Prb.Prb010, Prb.Prb011, Prb.Prb012,
                       Prb.Prb013, Prb.Prb014, Prb.Prb015, Prb.Prb016, Prb.Prb017, Prb.Prb018,
                       Prb.Prb019, Prb.Prb020, Prb.Prb021, Prb.Prb022, Prb.Prb023, Prb.Prb024,
                       Prb.Prb025, Prb.Prb026, Prb.Prb027, Prb.Prb028, Prb.Prb029, Prb.Prb030,
                       Prb.Prb031, Prb.Prb032, Prb.Prb033, Prb.Prb034, Prb.Prb035, Prb.Prb036,
                       Prb.Prb037, Prb.Prb038, Prb.Prb039, Prb.Prb040, Prb.Prb041, Prb.Prb042,
                       Prb.Prb043, Prb.Prb044, Prb.Prb045, Prb.Prb046, Prb.Prb047, Prb.Prb048,
                       Prb.Prb049, Prb.Prb050, Prb.Prb051, Prb.Prb052, Prb.Prb053, Prb.Prb054,
                       Prb.Prb055, Prb.Prb056, Prb.Prb057, Prb.Prb058, Prb.Prb059, Prb.Prb060,
                       Prb.Prb061, Prb.Prb065, Prb.Prb067, Prb.Prb075, Prb.Prb081, Prb.Prb082,
                       Prb.Prb083, Prb.Prb085, Prb.Prb086, Prb.Prb087, Prb.Prb088, Prb.Prb090,
                       Prb.Prb097, Prb.Prb098, Prb.Prb099, Prb.Prb100
  other-extensions:    FlexibleContexts
                       BangPatterns
  build-depends:       base, array, memoize, time
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
