-- To build with profiling :
--   cabal configure --enable-profiling --profiling-detail=all-functions
--   cabal run -- +RTS -p -RTS

name: projecteuler
version: 0.1
build-type: Simple
cabal-version: >=1.10

executable projecteuler
  main-is:             Main.hs
  other-modules:       Lib.BellmanFord,
                       Lib.Combinations,
                       Lib.ContinuedFraction,
                       Lib.Digits,
                       Lib.FoldUniq,
                       Lib.IsPerm,
                       Lib.IsPrime,
                       Lib.Isqrt,
                       Lib.Memoize,
                       Lib.Permutations,
                       Lib.PowerMod,
                       Lib.PythagoreanTriples,
                       Prb.Prb001,
                       Prb.Prb002,
                       Prb.Prb003,
                       Prb.Prb004,
                       Prb.Prb005,
                       Prb.Prb006,
                       Prb.Prb007,
                       Prb.Prb008,
                       Prb.Prb009,
                       Prb.Prb010,
                       Prb.Prb011,
                       Prb.Prb012,
                       Prb.Prb013,
                       Prb.Prb014,
                       Prb.Prb015,
                       Prb.Prb016,
                       Prb.Prb017,
                       Prb.Prb018,
                       Prb.Prb019,
                       Prb.Prb020,
                       Prb.Prb021,
                       Prb.Prb022,
                       Prb.Prb023,
                       Prb.Prb024,
                       Prb.Prb025,
                       Prb.Prb026,
                       Prb.Prb027,
                       Prb.Prb028,
                       Prb.Prb029,
                       Prb.Prb030,
                       Prb.Prb031,
                       Prb.Prb032,
                       Prb.Prb033,
                       Prb.Prb034,
                       Prb.Prb035,
                       Prb.Prb036,
                       Prb.Prb037,
                       Prb.Prb038,
                       Prb.Prb039,
                       Prb.Prb040,
                       Prb.Prb041,
                       Prb.Prb042,
                       Prb.Prb043,
                       Prb.Prb044,
                       Prb.Prb045,
                       Prb.Prb046,
                       Prb.Prb047,
                       Prb.Prb048,
                       Prb.Prb049,
                       Prb.Prb050,
                       Prb.Prb051,
                       Prb.Prb052,
                       Prb.Prb053,
                       Prb.Prb054,
                       Prb.Prb055,
                       Prb.Prb056,
                       Prb.Prb057,
                       Prb.Prb058,
                       Prb.Prb059,
                       Prb.Prb060,
                       Prb.Prb061,
                       Prb.Prb062,
                       Prb.Prb063,
                       Prb.Prb064,
                       Prb.Prb065,
                       Prb.Prb066,
                       Prb.Prb067,
                       Prb.Prb068,
                       Prb.Prb069,
                       Prb.Prb070,
                       Prb.Prb071,
                       Prb.Prb075,
                       Prb.Prb076,
                       Prb.Prb079,
                       Prb.Prb080,
                       Prb.Prb081,
                       Prb.Prb082,
                       Prb.Prb083,
                       Prb.Prb085,
                       Prb.Prb086,
                       Prb.Prb087,
                       Prb.Prb088,
                       Prb.Prb089,
                       Prb.Prb090,
                       Prb.Prb091,
                       Prb.Prb092,
                       Prb.Prb097,
                       Prb.Prb098,
                       Prb.Prb099,
                       Prb.Prb100,
                       Problems
  default-extensions:  FlexibleContexts
                       BangPatterns
  build-depends:       base, array, time
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wno-type-defaults
